# LanguageClient-neovim

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE.txt  LanguageClient.py  LanguageClient_test.py  LanguageServerClient.py  Makefile  README.md  RPC.py  TODO.md  appveyor.yml  build.rs  clippy.toml  install  install.ps1  install.sh  logger.py  min-init.vim  min-vimrc  min-vimrc.vim  mypy.ini  rustfmt.toml  setup.py  shell.nix  util.py  util_test.py  wrapper.sh
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.vim/: settings.json
LanguageClient/: Debounce.py  Debource_test.py  LanguageClient.py  LanguageClient_test.py  RPC.py  RemoteExample.py  TextDocumentItem.py  TextDocumentItem_test.py  __init__.py  util.py  util_test.py  wrapper.sh
autoload/: LSP.vim  LanguageClient.vim
autoload/health/: LanguageClient.vim
ci/: Dockerfile  before_deploy.ps1  before_deploy.sh  cleanup-binary-tags.py  github-release.sh  release-hook.sh  script.sh
doc/: LanguageClient.txt  install-python3-support.md
nix/: sources.json  sources.nix
plugin/: LanguageClient.vim
pythonx/: LanguageClient_wrapper.py
rplugin/python3/: .gitignore  Makefile  setup.cfg  test.sh
rplugin/python3/LanguageClient/: CommandsClient.py  CompletionItemKind.py  Debource_test.py  DiagnosticSeverity.py  DiagnosticsDisplay.py  LanguageClient.py  LanguageClient_test.py  MessageType.py  RPC.py  Severity.py  Sign.py  TextDocumentItem.py  TextDocumentItem_test.py  __init__.py  logger.py  state.py  state_test.py  util.py  util_test.py  wrapper.sh
rplugin/python3/denite/: common.py
rplugin/python3/tests/: vimrc
src/: config.rs  context.rs  json_utils.rs  language_client.rs  language_server_protocol.rs  languageclient.rs  logger.rs  main.rs  rpcclient.rs  rpchandler.rs  rust_analyser.rs  sign.rs  types.rs  utils.rs  viewport.rs  vim.rs  vimext.rs  watcher.rs
src/config/: config.rs  mod.rs  server_command.rs
src/extensions/: clangd.rs  gopls.rs  java.rs  mod.rs  rls.rs  rust_analyzer.rs
src/lsp/: client.rs  completion_item.rs  dollar.rs  mod.rs  text_document.rs  window.rs  workspace.rs
src/rpcclient/: io.rs  mock.rs  mod.rs
tests/: LanguageClient_test.py  TestLanguageClient.py  context.py  integ.rs  test.sh  util.py  vimrc  wrapper-server.sh
tests/data/: .lvimrc  vimrc
tests/data/sample-cpp/: .gitignore  914-completion-header-cursor.cpp  CMakeLists.txt  completion.c  glfwtest.cpp  include-completion.c  main.cpp  simple.c
tests/data/sample-cs/: Solution.cs
tests/data/sample-css/: sample.css
tests/data/sample-elixir/: .gitignore  README.md  mix.exs
tests/data/sample-go/: go.mod  main.go  other.go  simple.go
tests/data/sample-hs/: main.hs
tests/data/sample-html/: index.html
tests/data/sample-java/: pom.xml
tests/data/sample-purescript/: .gitignore  bower.json
tests/sample-rs/: Cargo.toml
vim-eval-derive/: Cargo.toml
vim-eval-derive/src/: lib.rs
(+47 files in other folders)
