[package]
name = "languageclient"
version = "0.1.157"
authors = ["Junfeng Li <autozimu@gmail.com>"]
description = "Language Server Protocol (LSP) support for vim and neovim"
publish = false
edition = "2018"

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file = "install.sh", search = "\nversion=.*", replace = "\nversion={{version}}" },
    { file = "install.ps1", search = "version = '.*'", replace = "version = '{{version}}'" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]
pre-release-hook = ["cargo", "build"]
tag-name = "{{version}}"

[dependencies]
failure = "0"
itertools = "0.8"
log = "0.4"
log4rs = "0"
structopt = "0"
maplit = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
json-patch = "0.2"
crossbeam = "0.7.3"
jsonrpc-core = "12"
lsp-types = { version = "0.70.0", features = ["proposed"] }
url = "2"
pathdiff = "0"
diff = "0"
regex = "1"
glob = "0"
notify = "4"
shellexpand = "1"
derivative = "2"
