[package]
name = "languageclient"
version = "0.1.161"
authors = ["Junfeng Li <autozimu@gmail.com>"]
description = "Language Server Protocol (LSP) support for vim and neovim"
publish = false
edition = "2018"

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file = "install.sh", search = "\nversion=.*", replace = "\nversion={{version}}" },
    { file = "install.ps1", search = "version = '.*'", replace = "version = '{{version}}'" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]
pre-release-hook = ["cargo", "build"]
tag-name = "{{version}}"

[dependencies]
itertools = "0.9"
log = "0.4"
log4rs = "0"
clap = { version = "2", default-features = false }
maplit = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
json-patch = "0.2"
crossbeam = "0.7.3"
jsonrpc-core = "15"
lsp-types = { version = "0.83", features = ["proposed"] }
url = "2"
pathdiff = "0"
diff = "0"
regex = "1"
glob = "0"
notify = "4"
shellexpand = "2.0.0"
derivative = "2.1.1"
anyhow = "1.0.32"
thiserror = "1.0.20"
lazy_static = "1.4.0"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-log = "0.1.1"
